Bug 57754 - [swrast] Mesa 9.1-devel implementation error: Unable to delete renderbuffer, no context
Summary: [swrast] Mesa 9.1-devel implementation error: Unable to delete renderbuffer, ...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-01 03:32 UTC by Vinson Lee
Modified: 2012-12-04 15:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2012-12-01 03:32:14 UTC
mesa: f3476ec8fa5a94d469a12318c537b13ce9cc5a45 (master)

Run piglit glx-window-life on swrast.

$ ./bin/glx-window-life -auto
Mesa 9.1-devel implementation error: Unable to delete renderbuffer, no context
Please report at bugs.freedesktop.org
Mesa 9.1-devel implementation error: Unable to delete renderbuffer, no context
Please report at bugs.freedesktop.org
Mesa 9.1-devel implementation error: Unable to delete renderbuffer, no context
Please report at bugs.freedesktop.org
Mesa 9.1-devel implementation error: Unable to delete renderbuffer, no context
Please report at bugs.freedesktop.org

c73245882c7ff1277b190b97f093f7b423a22f10 is the first bad commit
commit c73245882c7ff1277b190b97f093f7b423a22f10
Author: Brian Paul <brianp@vmware.com>
Date:   Fri Nov 30 10:04:48 2012 -0700

    mesa: pass context parameter to gl_renderbuffer::Delete()
    
    We sometimes need a rendering context when deleting renderbuffers.
    Pass it explicitly instead of trying to grab a current context
    (which might be NULL).  The next patch will make use of this.
    
    Note: this is a candidate for the stable branches.
    
    Reviewed-by: Jose Fonseca <jfonseca@vmware.com>

:040000 040000 a7a4ac22bb7f5ef34753cf500c0f885d1058c7b1 3342ecc657c9b60cefbac65452cc10eb9a9336fb Msrc
Comment 1 Brian Paul 2012-12-04 15:35:13 UTC
Fixed by 006918c0db77e945ac56b15bc64eba502b86d56c.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.